<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tRoomname">Chatroom</string>
    <string name="tNickname">Nickname</string>
    <string name="hRoomname">Chatroom name</string>
    <string name="hNickname">Your nickname</string>
    <string name="bLogin">Login</string>
    <string name="action_keys">Show my crypto key</string>
    <string name="aPrivateKey">My Crypto Key</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quitconfirm">Are you really want to quit this chat?</string>

</resources>
