<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:padding="10dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="170dp" 
        android:padding="5dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/chatbanner" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="73dp" 
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:textSize="17sp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tNickname"/>

        <EditText
            android:id="@+id/nickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
			android:hint="@string/hNickname"  >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView2"
            android:textSize="17sp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tRoomname"/>

        <EditText
            android:id="@+id/roomname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"  
            android:hint="@string/hRoomname" >
        </EditText>
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp" 
        android:layout_gravity="center"
        android:padding="0dp" >
            
        <Button
        	android:id="@+id/login"
        	android:layout_marginTop="20dp"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:gravity="center"
        	android:background="#009ec2"
        	android:textColor="#ffffff"
        	android:text="@string/bLogin" />
        
    </LinearLayout>

</LinearLayout>